Fixed small issues

--- a/roles/app-tier/tasks/main.yml
+++ b/roles/app-tier/tasks/main.yml
@@ -6,13 +6,15 @@
     state: latest
 - name: create tomcat ROOT directory
   file:
-    path: "{{ WEBROOT }}/ROOT"
+    path: "{{ webapps }}/ROOT"
     state: directory
-- name: copy index.html to tomcat "{{ WEBROOT }}/index.html"
+- name: copy index.html to tomcat webapps ROOT"
   template:
     src: index.html.j2
-    dest: "{{ WEBROOT }}/index.html"
+    dest: "{{ webapps }}/ROOT/index.html"
     mode: 0644
+  notify:
+    - restart_tomcat
 - name: start Tomcat service and enable Tomcat to start at boot time
   service:
     name: tomcat.service
